First draft of 3-coordinate procrystals done

--- a/references.bib
+++ b/references.bib
@@ -1282,6 +1282,16 @@ title = {{Computer Generation of Structural Models of Amorphous Si and Ge}},
 volume = {54},
 year = {1985}
 }
+@article{Camp2003,
+author = {Camp, Philip J},
+doi = {10.1103/PhysRevE.68.061506},
+file = {:Users/David/Documents/Work/DPhil/Papers/PhysRevE.68.061506.pdf:pdf},
+journal = {Phys. Rev. E},
+pages = {061506},
+title = {{Structure and phase behavior of a two-dimensional system with core-softened and long-range repulsive interactions}},
+volume = {68},
+year = {2003}
+}
 @article{Yuan2002,
 author = {Yuan, Xianglong and Cormack, A N},
 file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-S0927025601002567-main-2.pdf:pdf},
@@ -1805,6 +1815,17 @@ pages = {10578--10583},
 title = {{Network approach to patterns in stratocumulus clouds}},
 volume = {114},
 year = {2017}
+}
+@article{Griebel2007,
+author = {Griebel, Michael and Hamaekers, Jan},
+doi = {10.1016/j.commatsci.2006.06.013},
+file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-S0927025606002291-main.pdf:pdf},
+journal = {Comput. Mater. Sci.},
+keywords = {boron-nitride nanotubes,composites,elastic moduli,molecular dynamics simulations,si-b-n ceramics},
+pages = {502--517},
+title = {{Molecular dynamics simulations of boron-nitride nanotubes embedded in amorphous Si-B-N}},
+volume = {39},
+year = {2007}
 }
 @article{Zhang2018a,
 author = {Zhang, Jin},
