--- a/shortcuts.sty
+++ b/shortcuts.sty
@@ -35,7 +35,8 @@
 \newcommand{\kb}{k_\text{B}}
 \newcommand{\dd}{\text{d}}
 \newcommand{\obj}{\Omega}
-\newcommand{\pme}{p^{\text{me}}}
+%\newcommand{\pme}{p^{\text{me}}}
+\newcommand{\pme}{p}
 \newcommand{\br}[2]{\left\{#1,#2\right\}}
 %\newcommand{\pro}[2]{$\left\{#1,#2\right\}$}
 \newcommand{\pro}[2]{$#1,#2-$}
