--- a/text/general_networks.tex
+++ b/text/general_networks.tex
@@ -1,4 +1,4 @@
-\chapter{Generalisation of Disordered Physical Networks}
+\chapter{Generalised Disordered Physical Networks}
 \label{ch:generalnetworks}
 
 \begin{chapterabstract}
